# NetDisk-Frontend

./: .gitignore  CMakeLists.txt  FRONTEND_MIGRATION.md  temp_fix.py
FluentUI/Qt5/imports/FluentUI/Controls/: FluNavigationView.qml  FluPaneItem.qml
FluentUI/Qt6/imports/FluentUI/Controls/: FluNavigationView.qml  FluPaneItem.qml
src/: App.qml  CMakeLists.txt  main.cpp  main.qml  qml.qrc  res.qrc
src/controller/: clipboardcontroller.cpp  clipboardcontroller.h  downloadcontroller.cpp  downloadcontroller.h  favoritescontroller.cpp  favoritescontroller.h  filecontroller.cpp  filecontroller.h  logincontroller.cpp  logincontroller.h  mysharecontroller.cpp  mysharecontroller.h  previewcontroller.cpp  previewcontroller.h  recyclebincontroller.cpp  recyclebincontroller.h  settingscontroller.cpp  settingscontroller.h  sharecontroller.cpp  sharecontroller.h  uploadcontroller.cpp  uploadcontroller.h  usercontroller.cpp  usercontroller.h
src/global/: AppConfig.h
src/model/: downloadlistmodel.cpp  downloadlistmodel.h  filelistmodel.cpp  filelistmodel.h  uploadlistmodel.cpp  uploadlistmodel.h
src/network/: networkmanager.cpp  networkmanager.h
src/qml/Auth/: FormValidator.js  LoginPage.qml  LoginPanel.qml  RegisterPanel.qml  ServiceTermsPage.qml
src/qml/Common/: IconPivot.qml  LeftIconTextBox.qml  PillTabBar.qml  SearchBox.qml
src/qml/Common/SearchBox/: CloudResultDelegate.qml  HistoryDelegate.qml  SearchBox.qml
src/qml/Component/Common/: LeftIconTextBox.qml
src/qml/Component/Login/: LoginPanel.qml  RegisterPanel.qml
src/qml/Main/: MainPage.qml  NavItems.qml  ShareSaveDialog.qml  ShareSniffDialog.qml  Sidebar.qml  TopBar.qml
src/qml/Page/: LoginPage.qml
src/qml/Splash/: SplashLogo.qml  SplashPage.qml  SplashProgressBar.qml  SplashTitle.qml  SplashVersionLabel.qml
src/qml/View/File/: FilePage.qml
src/qml/View/File/AllFiles/: AllFilesView.qml  PathBar.qml
src/qml/View/File/Components/: CreateFolderDialog.qml  DangerConfirmDialog.qml  FileContextMenu.qml  FileDetailDialog.qml  FileDownloadHelper.qml  FileGridView.qml  FileListView.qml  FilePreviewDialog.qml  FileToolBar.qml  FileUploadHelper.qml  RenameDialog.qml  ShareDialog.qml
src/qml/View/File/Favorites/: FavoritesView.qml
src/qml/View/File/MyShares/: MySharesView.qml
src/qml/View/File/RecycleBin/: RecycleBinContextMenu.qml  RecycleBinListView.qml  RecycleBinToolBar.qml  RecycleBinView.qml
src/qml/View/Home/: CategoryDetailPage.qml  HomePage.qml  RecentFiles.qml  SmartCategories.qml  StorageCard.qml
src/qml/View/Settings/: SettingsPage.qml
src/qml/View/Transfer/: TransferCompletedList.qml  TransferDownloadList.qml  TransferPage.qml  TransferTaskRow.qml  TransferUploadList.qml
src/res/: res.qrc
src/res/html/: service.html
src/service/: recentfilesmanager.cpp  recentfilesmanager.h  thumbnailprovider.cpp  thumbnailprovider.h  transferhistorymanager.cpp  transferhistorymanager.h  uploadstatemanager.cpp  uploadstatemanager.h  userstoragepaths.cpp  userstoragepaths.h
